cabal-version:      3.0
name:               ppad-bip32
version:            0.3.3
synopsis:           BIP32 hierarchical deterministic wallets.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
description:
  [BIP32](https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki)
  hierarchical deterministic wallets and extended keys, with support for
  serialization and parsing.

flag llvm
  description: Use GHC's LLVM backend.
  default:     False
  manual:      True

source-repository head
  type:     git
  location: git.ppad.tech/bip32.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  if flag(llvm)
    ghc-options: -fllvm -O2
  exposed-modules:
      Crypto.HDKey.BIP32
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , ppad-base58 >= 0.2.3 && < 0.3
    , ppad-fixed >= 0.1.3 && < 0.2
    , ppad-ripemd160 >= 0.1.4 && < 0.2
    , ppad-secp256k1 >= 0.5.3 && < 0.6
    , ppad-sha256 >= 0.3 && < 0.4
    , ppad-sha512 >= 0.2 && < 0.3

test-suite bip32-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , array
    , bytestring
    , ppad-base16
    , ppad-base58
    , ppad-bip32
    , ppad-fixed
    , tasty
    , tasty-hunit

benchmark bip32-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , array
    , bytestring
    , criterion
    , deepseq
    , ppad-bip32
    , ppad-fixed
    , ppad-secp256k1

